# vulcast-firmware

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  deploy.sh
debian/: vulcast-firmware.service  vulcast.conf
src/: cmdline.rs  controllers.rs  data_streamer.rs  graphql.rs  graphql_signaller.rs  main.rs
src/graphql/: backend_query.rs  backend_query_tmpl.rs  control_query.rs  signal_query.rs  signal_query_tmpl.rs
src/graphql/query/: backend_query.gql  signal_query.gql
