[package]
name = "vulcast-firmware"
authors = ["Callum"]
version = "0.1.0"
edition = "2018"
description = "Vulcast firmware"
readme = "README.md"
license = "TODO"

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "Firmware for Vulcast device"
section = "admin"
priority = "optional"
assets = [
    ["target/release/vulcast-firmware", "usr/bin/vulcast-firmware", "755"],
    ["debian/vulcast-firmware.service", "/lib/systemd/system/vulcast-firmware.service", "644"], 
]
maintainer-scripts = "debian/scripts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mediasoup = "0.7"

log = "0.4.14"
env_logger = "0.8.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rust-ini = "0.17.0"

thiserror = "1.0"
anyhow = "1.0"
clap = "3.0.0-beta.2"
bimap = "0.6.1"
derive_more = "0.99.0"

tokio = { version = "1.0.2", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.5", features = ["sync"] }
futures = "0.3"
async-trait = "0.1.48"

graphql_client = "0.9"

native-tls = "0.2"
http = "0.2"
tokio-tungstenite = { version = "0.15", features = ["native-tls"] }
reqwest = { version = "0.11.4", features = ["json"] }

graphql-ws = { git = "ssh://git@github.com/Netdex/graphql-ws.git" }

[build-dependencies]
built = "0.5"
# TODO change this branch
schema = { git = "ssh://git@github.com/vulcan-fydp/schema.git", branch = "rust_include" }

[dev-dependencies]
