[package]
name = "vulcast-firmware"
authors = ["Callum"]
version = "0.1.0"
edition = "2018"
description = "Vulcast firmware"
readme = "README.md"
license = "TODO"

[package.metadata.deb]
depends = "$auto, systemd"
extended-description = "Firmware for Vulcast device"
section = "admin"
priority = "optional"
assets = [
    [
        "target/release/vulcast-firmware",
        "usr/bin/vulcast-firmware",
        "755",
    ],
    [
        "debian/vulcast-firmware.service",
        "/lib/systemd/system/vulcast-firmware.service",
        "644",
    ],
]
maintainer-scripts = "debian/scripts"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# mediasoup = { version = "0.8", git = "https://github.com/netdex/mediasoup", branch = "rust-async-trait-send" }
vulcast-rtc = { version = "*", git = "ssh://git@github.com/vulcan-fydp/vulcast-rtc" }

# once_cell = "1.8.0"
log = "0.4.14"
env_logger = "0.8.3"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["serde", "v4"] }
rust-ini = "0.17.0"

# thiserror = "1.0"
anyhow = "1.0"
# bimap = "0.6.1"
# derive_more = "0.99.0"

tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures = "0.3"
async-trait = "0.1.48"

graphql_client = "0.10"

rustls = { version = "0.19", features = ["dangerous_configuration"] }
webpki = "0.21.0"
http = "0.2"
tokio-tungstenite = { version = "0.15", features = ["rustls-tls"] }
reqwest = { version = "0.11.4", default_features = false, features = [
    "json",
    "rustls-tls",
] }

graphql-ws = { git = "ssh://git@github.com/Netdex/graphql-ws.git", version = "0.3.2" }

[build-dependencies]
built = "0.5"
schema = { git = "ssh://git@github.com/vulcan-fydp/schema.git", version = "0.0.29" }

[dev-dependencies]
